--- a/angular.json
+++ b/angular.json
@@ -2,7 +2,8 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "cli": {
-    "packageManager": "npm"
+    "packageManager": "npm",
+    "analytics": "fdf69e2e-cd6a-4bb6-83bb-00d31358ebb7"
   },
   "newProjectRoot": "projects",
   "projects": {
