--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/compiler-cli": "^18.2.0",
     "@types/crypto-js": "^4.2.2",
     "@types/jasmine": "~5.1.0",
+    "@types/qrcode": "^1.5.6",
     "autoprefixer": "^10.4.22",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
